NngSharp/Native/_nng.h



	typedef struct nng_socket_s {
		uint32_t id;
	} nng_socket;
	typedef struct nng_msg  nng_msg;

	typedef struct nng_aio  nng_aio;


	// nng_send_aio sends data on the socket asynchronously.  As with nng_send,
	// the completion may be executed before the data has actually been delivered,
	// but only when it is accepted for delivery.  The supplied AIO must have
	// been initialized, and have an associated message.  The message will be
	// "owned" by the socket if the operation completes successfully.  Otherwise
	// the caller is responsible for freeing it.
	NNG_DECL void nng_send_aio(nng_socket, nng_aio*);


	// nng_recv_aio receives data on the socket asynchronously.  On a successful
	// result, the AIO will have an associated message, that can be obtained
	// with nng_aio_get_msg().  The caller takes ownership of the message at
	// this point.
	NNG_DECL void nng_recv_aio(nng_socket, nng_aio*);


	// Async IO API.  AIO structures can be thought of as "handles" to
	// support asynchronous operations.  They contain the completion callback, and
	// a pointer to consumer data.  This is similar to how overlapped I/O
	// works in Windows, when used with a completion callback.
	//
	// AIO structures can carry up to 4 distinct input values, and up to
	// 4 distinct output values, and up to 4 distinct "private state" values.
	// The meaning of the inputs and the outputs are determined by the
	// I/O functions being called.

	// nng_aio_alloc allocates a new AIO, and associated the completion
	// callback and its opaque argument.  If NULL is supplied for the
	// callback, then the caller must use nng_aio_wait() to wait for the
	// operation to complete.  If the completion callback is not NULL, then
	// when a submitted operation completes (or is canceled or fails) the
	// callback will be executed, generally in a different thread, with no
	// locks held.
	NNG_DECL int nng_aio_alloc(nng_aio**, void (*)(void*), void*);


	// nng_aio_free frees the AIO and any associated resources.
	// It *must not* be in use at the time it is freed.
	NNG_DECL void nng_aio_free(nng_aio*);


	// nng_aio_result returns the status/result of the operation. This
	// will be zero on successful completion, or an nng error code on
	// failure.
	NNG_DECL int nng_aio_result(nng_aio*);


	// nng_aio_cancel attempts to cancel any in-progress I/O operation.
	// The AIO callback will still be executed, but if the cancellation is
	// successful then the status will be NNG_ECANCELED.
	NNG_DECL void nng_aio_cancel(nng_aio*);


	// nng_aio_set_msg sets the message structure to use for asynchronous
	// message send operations.
	NNG_DECL void nng_aio_set_msg(nng_aio*, nng_msg*);


	// nng_aio_get_msg returns the message structure associated with a completed
	// receive operation.
	NNG_DECL nng_msg* nng_aio_get_msg(nng_aio*);